fix(abstract-repository): deprecated 된 인스턴스 생성 메서드 대체. Class#newInstance -> Constructor#newInstance